fixing contrast with new colors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,7 +75,7 @@ nav li {
    width: 85%;
    height: 10%;
    background-color: rgb(161, 26, 26);
-   color: black;
+   color: rgb(176, 176, 176);
    text-align: center;
    font-weight: bolder;
 }
@@ -178,13 +178,8 @@ footer {
    }
    .p-color {
       margin-top: 20px;
-      text-align: center;
       width: 80%;
       height: 10%;
-      background-color: rgb(161, 26, 26);
-      color: black;
-      text-align: center;
-      font-weight: bolder;
    }
    #bottom-container {
       display: flex;
